--- a/care.html
+++ b/care.html
@@ -11,7 +11,7 @@
     <style>
         :root {
             /* Change this URL anytime to update background */
-            --bg-image: url("/mnt/data/9184592b-1219-4e59-ae4d-ee8c9760228f.png");
+            --bg-image: url("/WETH.jpg");
         }
 
         body {
